Add Controller class & ride request